Checkpoint before pulling in update state 4